--- a/TextFieldValidationSwift/Base.lproj/Main.storyboard
+++ b/TextFieldValidationSwift/Base.lproj/Main.storyboard
@@ -1,24 +1,115 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TextFieldValidationSwift" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uDO-e9-5D8">
+                                <rect key="frame" x="41.5" y="65" width="331" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="emailChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="BbI-ue-qUz"/>
+                                </connections>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Required" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K2Z-oS-xXV">
+                                <rect key="frame" x="41.5" y="109" width="68" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" systemColor="systemRedColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sAx-ur-A1m">
+                                <rect key="frame" x="41.5" y="139" width="331" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="passwordChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="e5G-fv-Ptr"/>
+                                </connections>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Required" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gNS-eE-6zE">
+                                <rect key="frame" x="41.5" y="183" width="68" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" systemColor="systemRedColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zsa-1B-hlq">
+                                <rect key="frame" x="41.5" y="213" width="331" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
+                                <connections>
+                                    <action selector="phoneChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="CjD-8q-obL"/>
+                                </connections>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Required" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HMY-75-E66">
+                                <rect key="frame" x="41.5" y="257" width="68" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" systemColor="systemRedColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NAF-Px-elb">
+                                <rect key="frame" x="172" y="325" width="70" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Submit"/>
+                                <connections>
+                                    <action selector="submitAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bxs-bL-7pf"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="NAF-Px-elb" firstAttribute="top" secondItem="zsa-1B-hlq" secondAttribute="bottom" constant="78" id="0cq-Y0-BBi"/>
+                            <constraint firstItem="gNS-eE-6zE" firstAttribute="top" secondItem="sAx-ur-A1m" secondAttribute="bottom" constant="10" id="2Yk-NW-yS0"/>
+                            <constraint firstItem="sAx-ur-A1m" firstAttribute="top" secondItem="uDO-e9-5D8" secondAttribute="bottom" constant="40" id="7Sj-Gu-8CV"/>
+                            <constraint firstItem="NAF-Px-elb" firstAttribute="centerX" secondItem="zsa-1B-hlq" secondAttribute="centerX" id="8Uy-ig-fIg"/>
+                            <constraint firstItem="uDO-e9-5D8" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="9CL-jL-inT"/>
+                            <constraint firstItem="K2Z-oS-xXV" firstAttribute="leading" secondItem="uDO-e9-5D8" secondAttribute="leading" id="BLV-PK-kNx"/>
+                            <constraint firstItem="zsa-1B-hlq" firstAttribute="centerX" secondItem="sAx-ur-A1m" secondAttribute="centerX" id="BgI-RQ-fqx"/>
+                            <constraint firstItem="uDO-e9-5D8" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.8" id="CDz-pn-l3h"/>
+                            <constraint firstItem="HMY-75-E66" firstAttribute="top" secondItem="zsa-1B-hlq" secondAttribute="bottom" constant="10" id="Fyy-s7-Q6t"/>
+                            <constraint firstItem="zsa-1B-hlq" firstAttribute="width" secondItem="sAx-ur-A1m" secondAttribute="width" id="QWh-01-8a1"/>
+                            <constraint firstItem="sAx-ur-A1m" firstAttribute="width" secondItem="uDO-e9-5D8" secondAttribute="width" id="SHu-6l-jNS"/>
+                            <constraint firstItem="HMY-75-E66" firstAttribute="leading" secondItem="zsa-1B-hlq" secondAttribute="leading" id="UXC-zw-bat"/>
+                            <constraint firstItem="K2Z-oS-xXV" firstAttribute="top" secondItem="uDO-e9-5D8" secondAttribute="bottom" constant="10" id="UwW-Aj-Vy8"/>
+                            <constraint firstItem="zsa-1B-hlq" firstAttribute="top" secondItem="sAx-ur-A1m" secondAttribute="bottom" constant="40" id="fph-Ps-OgG"/>
+                            <constraint firstItem="sAx-ur-A1m" firstAttribute="centerX" secondItem="uDO-e9-5D8" secondAttribute="centerX" id="gGn-lt-9u1"/>
+                            <constraint firstItem="gNS-eE-6zE" firstAttribute="leading" secondItem="sAx-ur-A1m" secondAttribute="leading" id="qOq-ef-22v"/>
+                            <constraint firstItem="uDO-e9-5D8" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="21" id="zYm-SP-qaf"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="emailError" destination="K2Z-oS-xXV" id="3X9-9T-Yg7"/>
+                        <outlet property="emailTF" destination="uDO-e9-5D8" id="e7U-Cb-YCP"/>
+                        <outlet property="passwordError" destination="gNS-eE-6zE" id="b7R-Ch-lNt"/>
+                        <outlet property="passwordTF" destination="sAx-ur-A1m" id="Vgb-rU-jvp"/>
+                        <outlet property="phoneError" destination="HMY-75-E66" id="Rnr-u6-V35"/>
+                        <outlet property="phoneTF" destination="zsa-1B-hlq" id="Yul-qm-17Q"/>
+                        <outlet property="submitButton" destination="NAF-Px-elb" id="AHr-dM-nth"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="35" y="84"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
